Added README and s3
